# reixs

./: .gitignore  README.md  pyproject.toml
docs/: REIXS-SPEC.md  TUTORIAL.md
docs/ADR/: ADR-001-layered-artifacts.md  ADR-003-hard-constraints-before-scoring.md  ADR-004-dual-output-contracts.md
docs/ddd/: appraisal_commercial_na_v2_0.md  asset_management_commercial_na_v1_0.md  asset_management_commercial_na_v2_0.md  core_commercial_re_na_v1_0.md  core_commercial_re_na_v2_0.md  investment_appraisal_commercial_na_v1_0.md  investment_commercial_na_v2_0.md  lease_abstraction_commercial_na_v2_0.md  leasing_commercial_na_v1_0.md  leasing_commercial_na_v2_0.md  property_management_commercial_na_v1_0.md  property_management_commercial_na_v2_0.md
docs/plans/: 2026-03-01-lease-abstraction-reixs-design.md  2026-03-01-reixs-design.md  2026-03-01-reixs-format-spec-design.md  2026-03-01-reixs-format-spec-implementation.md  2026-03-01-reixs-implementation.md  2026-03-01_REIXS.md  2026-03-03-ddd-collection-design.md  2026-03-03-ddd-collection-implementation.md  2026-03-03-ddd-deduplication-design.md  2026-03-03-ddd-deduplication-implementation.md  2026-03-03-sesf-v4-migration-design.md  2026-03-03-sesf-v4-migration.md
specs/invalid/: complex_no_adr.reixs.md  missing_ddd_ref.reixs.md  missing_ofd.reixs.md  missing_sesf.reixs.md
specs/templates/: lease_abstraction_commercial_na.reixs.md  lease_abstraction_ontario.reixs.md
tests/: test_compiler.py  test_ddd_refs.py  test_models.py  test_parser.py  test_section_model.py  test_sesf_adapter.py  test_validator.py
(+28 files in other folders)
